src/Pages/Games.css
.games_container{
    background-image: url(../assets/background.png);
    background-size: 100%;
    height: 100%;
    width: 100%;
    position: absolute;
    top: 0;
}

.games-content {
    display: flex;
    flex-wrap: wrap;
    overflow-x:scroll;
}



.gamecard {
    background-size: contain;
    background-repeat: no-repeat;
    width: 300px;
    height: 500px;
    /* border: 1px solid #ffffff22;
    background-color: #282c34;
    background: linear-gradient(0deg, rgba(40,44,52,1) 0%, rgba(17,0,32,.5) 100%);
    box-shadow: 0 7px 20px 5px #00000088;
    border-radius: .7rem;
    backdrop-filter: blur(7px);
    -webkit-backdrop-filter: blur(7px); */
    overflow: hidden;
    transition: .5s all;
    color: white;
    text-align: center;
    scroll-snap-align: center;
    flex: none;
    display: flex;
    justify-content: center;
}

.orig {
    transition: 1s all;
}

.orig .name{
    display: none;
}
.orig .info{
    display: none;
}
.orig .link{
    display: none;
}

.gamecard_container {
    padding-left: 5%;
    padding-right: 5%;
    padding-top: 25%;
    padding-bottom: 5%;
}

.expanded {
    transform: scale(1.015);
    filter: brightness(1.3);
    padding: 20%;
    transition: 1s all;
    padding-top: 35%;
}

.tags {
    width: 300px;
}

.x {
    scroll-snap-type: x mandatory;
    width: 100%;
    height: 100%;
    flex-flow: row nowrap;
    overflow-x: scroll;
    overflow-y: hidden;
}

::-webkit-scrollbar {
    width: 0px; 
    background: transparent;  /* Make scrollbar transparent */
}

.livegamecard {
    max-width: 300px;
    min-height: 200px;
    max-height: fit-content;
    margin: 2rem auto;
    border: 1px solid #ffffff22;
    background-color: #282c34;
    background: linear-gradient(0deg, rgba(40,44,52,1) 0%, rgba(17,0,32,.5) 100%);
    box-shadow: 0 7px 20px 5px #00000088;
    border-radius: .7rem;
    backdrop-filter: blur(7px);
    -webkit-backdrop-filter: blur(7px);
    overflow: hidden;
    transition: .5s all;
    padding: 20px;
    color: white;
    text-align: left;
}

.gamecard .name {
    margin-left: auto;
    font-family: 'Press Start 2P';
    font-weight: bold;
    font-size: x-large;
    transition: 0.2s ease color;
    text-transform: none;
    background-image: linear-gradient(orange, yellow, rgb(240, 240, 221), orange, yellow, orange);
    color: transparent;
    -webkit-background-clip: text;
    background-clip: text;
}



.gamecard:hover {
    ::before{
      filter: brightness(.5);
      top: -100%;
      left: 200%;
    } 
}

::-webkit-scrollbar {
    width: 0px;
    background: transparent; /* make scrollbar transparent */
}



.expanded .gamecard {
    background-repeat: no-repeat;
    overflow-x: hidden;
    overflow-y: hidden;
    transform: scale(1.115);
    display: block;
}

.info {
    box-shadow: 0 7px 50px 10px #000000aa;
    border-radius: 20px;
    padding: 25px;
    margin-top: 15px;
    height: 240px;
    overflow-y: scroll;
}

